--- a/tasks/templates/Dashboard/manager-dashboard.html
+++ b/tasks/templates/Dashboard/manager-dashboard.html
@@ -43,17 +43,17 @@
           {% elif task.status == 'IN_PROGRESS' %}
             <div class="w-2 h-2 bg-blue-500 rounded-full"></div>
           {% endif %}
-          <div><span>{{task.title}}</span></div>
+          <div><a href="{% url 'task-details' task.id %}">{{task.title}}</a></div>
         </div>
         <!-- Priority -->
         <div class="col-span-1">
           <span class="px-3 py-1 rounded-full text-sm
             {% if task.details.priority == 'H' %}
-              bg-blue-200 text-blue-600
+              bg-blue-100 text-blue-600
             {% elif task.details.priority == 'M' %}
-              bg-gray-200 text-gray-500
+              bg-yellow-100 text-yellow-600
             {% elif task.details.priority == 'L' %}
-              bg-red-200 text-red-500
+              bg-red-100 text-red-600
             {% endif %}">
             {{ task.details.get_priority_display }}
           </span>
