--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -30,8 +30,8 @@
         {% include "headers/manager_header.html" %}
       {% elif request.user.groups.all.0.name == "Employee" %}
         {% include "headers/employee_header.html" %}
-        {% comment %} {% else %}
-        {% include "headers/default_header.html" %} {% endcomment %}
+      {% else %}
+        {% include "headers/user_header.html" %}
       {% endif %}
     {% else %}
       {% include "headers/guest_header.html" %}
