--- a/users/templates/accounts/profile.html
+++ b/users/templates/accounts/profile.html
@@ -20,7 +20,7 @@
           <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200"
             >Edit Profile</a
           >
-          <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-gray-200"
+          <a href="{% url 'password-change' %}" class="block py-2 px-4 text-gray-700 hover:bg-gray-200"
             >Change Password</a
           >
         </nav>
