--- a/users/templates/registration/reset_password.html
+++ b/users/templates/registration/reset_password.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div class="bg-white border-2 rounded-2xl shadow-lg p-8 w-full max-w-md mx-auto my-10">
-      <h2 class="text-2xl font-bold text-center text-gray-800 mb-6">Login to Your Account</h2>
+      <h2 class="text-2xl font-bold text-center text-gray-800 mb-6">Forgot Password</h2>
 
       {% if messages %}
         {% for msg in messages %}
@@ -17,17 +17,9 @@
 
         <button type="submit"
           class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 rounded-md transition duration-200"> 
-          Log In
+          Go
         </button>
-
-        <p class="text-center text-sm text-gray-600 mt-4">
-          <a href="{% url 'password-reset' %}" class="text-blue-600 hover:underline font-medium">Forgot Password...</a>
-        </p>
   
-        <p class="text-center text-sm text-gray-600 mt-4">
-          Don't have an account?
-          <a href="{% url 'sign-up' %}" class="text-blue-600 hover:underline font-medium">Register here</a>
-        </p>
       </form>
   </div>
 {% endblock content %}
