--- a/core/templates/headers/user_header.html
+++ b/core/templates/headers/user_header.html
@@ -30,7 +30,7 @@
           </button>
         </div>
         <div class="flex gap-1 bg-blue-500 text-white rounded">
-            <form method="post" action="{% url 'sign-out' %}">
+            <form method="post" action="{% url 'log-out' %}">
                 {% csrf_token %}
                 <button class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">
                     Logout
